<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>costmap_2d_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kopytjuk@gmail.com">marat</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
